--- a/shop/app/views/home/index.html.erb
+++ b/shop/app/views/home/index.html.erb
@@ -12,9 +12,9 @@
                               <li class="list-group-item">副類別</li>
                       </ul>
                 </li>
-                <li  class="list-group">
+                <li  class="list-group-item">
                       類別
-                      <ul class="list-group-item">
+                      <ul class="list-group" >
                               <li class="list-group-item">副類別</li>
                               <li class="list-group-item">副類別</li>
                               <li class="list-group-item">副類別</li>
@@ -28,25 +28,55 @@
                       <div class="row">
                         <div class="col-xs-12">
                            <div class="jumbotron">
-                                <h1>大型廣告</h1>
-                                <p>----</p>
+                                <h1><%= @ad[:title]%> </h1>
+                                <p> <%= @ad[:des] %></p>
+                                <p><a href="#" class="btn btn-primary btn-lg "  role="button" ><%=@ad[:action_title]%></a></p>
                             </div>
                         </div>
                         </div>
                         <div class="row">
+
+                           <% @products.each do |product|%>
                               <div class="col-xs-3">
-                                  商品
+                                        <div class="thumbnail">
+                                       <%= image_tag product[:image_url] %>
+                                         <div class="caption">
+                                           <h3> <%= product[:name]%></h3>
+                                           <p><%= product[:description]%></p>
+                                           <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                                         </div>
+                                       </div>
                                </div>
-                               <div class="col-xs-3">
-                                   商品
-                                </div>
-                                <div class="col-xs-3">
-                                    商品
-                                 </div>
-                                 <div class="col-xs-3">
-                                     商品
-                                  </div>
+                            <%end %>
                         </div>
+                                  <div class="row">
+                                    <div class="col-xs-12">
+                                      <nav aria-label="Page navigation">
+                                              <ul class="pagination">
+                                                  <% if @page > (@first_page-1)%>
+                                                    <li>
+                                                      <%= link_to root_path(page:(@page)) do%>
+                                                                <span aria-hidden="true">&laquo;</span>
+                                                      <%end%>
+                                                  </li>
+                                                    <%end%>
+                                                            <% (@first_page..@last_page).each do |page_number| %>
+                                                                  <li><%= link_to  page_number ,root_path(page: page_number)%></li>
+                                                            <%  end %>
+                                                        <% if @page < (@last_page-1)%>
+                                                        <li>
+                                                          <%= link_to root_path(page:(@page+2)) do%>
+                                                                    <span aria-hidden="true">&raquo;</span>
+                                                          <%end%>
+                                                      </li>
+                                                        <%end%>
+                                              </ul>
+                                          </nav>
+                                    </div>
+                                  </div>
                 </div>
+
+
+
           </div>
   </div>
