--- a/shop/app/views/layouts/application.html.erb
+++ b/shop/app/views/layouts/application.html.erb
@@ -6,13 +6,20 @@
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta charset="utf-8">
+    <meta name="google-signin-scope" content="profile email">
+    <meta name="google-signin-client_id" content="49986869097-hgbicgrad3ue3i3b2b00818m94abu1fo.apps.googleusercontent.com">
+
+
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application'%>
   </head>
 
   <body>
+
     <%= render  partial: 'layouts/nav'%>
-    <%= render  partial: 'layouts/foot'%>
+
     <%= yield %>
+        <%= render  partial: 'layouts/foot'%>
   </body>
 </html>
