--- a/shop/app/views/products/index.html.erb
+++ b/shop/app/views/products/index.html.erb
@@ -38,16 +38,8 @@
 
                            <% @products.each do |product|%>
                               <div class="col-xs-3">
-                                        <div class="thumbnail">
-                                       <%= image_tag product[:image_url] %>
-                                         <div class="caption">
-                                            <h3> <%=%></h3>
-                                           <p><%= "#{product[:id]}. #{product[:description]}"%></p>
-                                           <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-                                         </div>
-                                       </div>
-                               </div>
-                            <%end %>
+                              <%= render  '/products/card/small' , product: product%>
+                                <%end %>
                         </div>
                                   <div class="row">
                                     <div class="col-xs-12">
