--- a/shop/app/views/products/new.html.erb
+++ b/shop/app/views/products/new.html.erb
@@ -1,25 +1,15 @@
 <h3>新增產品</h3>
-<%= form_tag("/products", method: "post") do %>
-<label >
- 名稱
-<input type="text" name="name" />
-</label>
-<br/>
-<label >
-敘述
-<input type="text" name="description" />
-</label>
-<label >
-<br/>
-圖片連結
-<input type="text" name="image_url" />
-</label>
-<br/>
-<label >
-價格
-<input type="text" name="price" />
-</label>
-<br/>
-<button type="submit" name="new">新增</button>
+<%= form_for  @product , method: :post  do |product| %>
+
+<%= product.label :名稱%>
+<%= product.text_field :name%> <br />
+<%= product.label :描述%>
+<%= product.text_field :description%> <br />
+<%= product.label :價格%>
+<%= product.text_field :price%> <br />
+<%= product.label :圖片連結%>
+<%= product.text_field :image_url%> <br />
+<%= product.submit "新增", class:"btn btn-primary"%>
+<%= link_to "back" ,root_path , class:"btn btn-primary" %>
 <%end%>
 <%= @note%>
