--- a/beginner/app/views/flower_user/log_in.html.erb
+++ b/beginner/app/views/flower_user/log_in.html.erb
@@ -16,8 +16,8 @@
 							<div class="form-group col-xs-12" style="text-align: center;">
 							<%= label_tag :password,"密碼",for:"exampleInputPassword1"%>:
 							<%= password_field_tag :password ,nil,class:"form-control",placeholder:"123"%><br/>
-							</div><br/><br/>
-
+							</div>
+							<div class="">
 							<div class="col-xs-12" style="text-align: center;">
 							<%= submit_tag :送出 ,class:"btn btn-default"%>
 							<%=link_to '返回',flower_products_path,class:"btn btn-default"%>
