--- a/beginner/app/assets/stylesheets/application.css
+++ b/beginner/app/assets/stylesheets/application.css
@@ -21,3 +21,53 @@ body{
             margin: 0px;
             padding: 0px;
 }
+
+/**/
+@media screen and (max-width: 768px) {
+  /*left*/  .side-collapse-container-left{
+    position:relative;
+    left:0;
+    transition:left .4s;
+  }
+  .side-collapse-container-left.out{
+    left:70%;
+  }
+  .side-collapse-left {
+     top:50px;
+     bottom:0;
+     left:0;
+     width:70%;
+     position:fixed;
+     overflow:hidden;
+     transition:width .4s;
+
+
+
+   }
+   .side-collapse-left.in {
+      width:0;
+    }
+  /*right*/    .side-collapse-container-right{
+      position:relative;
+      right:0;
+      transition:right .4s;
+    }
+    .side-collapse-container-right.out{
+      right:70%;
+    }
+    .side-collapse-right {
+      top:50px;
+      bottom:0;
+      right:0;
+      width:70%;
+     
+      position:fixed;
+      overflow:hidden;
+      transition:width .4s;
+      background-color: #FFFFFF;
+      padding: 0px;
+    }
+    .side-collapse-right.in {
+      width:0;
+   }
+ }
