--- a/beginner/app/views/flower/flower.html.erb
+++ b/beginner/app/views/flower/flower.html.erb
@@ -1,63 +1,53 @@
+  <%= render partial:'flower/nav'%>
 
+ 
+        <!-- <div class="jumbotron col-xs-12"> -->
+          <!-- <div class="container-fluid"> -->
+              <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+               
+              <!-- Indicators -->
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+              </ol>
 
-<div class="container-fluid">
-    <%= render partial:'flower/nav'%>
-<div class="row">
-<div class="jumbotron MPzero col-xs-12  col-sm-12 ">
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-  </ol>
+              <!-- Wrapper for slides -->
+              <div class="carousel-inner" role="listbox">
 
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-       <%= image_tag  'flower_picture/DSC_0011.JPG',class:" img-responsive  front_index"%>
-      <div class="carousel-caption">
-      </div>
-    </div>
-    <div class="item">
-      <%= image_tag  'flower_picture/DSC_0083.JPG',class:" img-responsive  front_index"%>
-      <div class="carousel-caption">
-      </div>
-    </div>
-  </div>
+                <div class="item active">
+                  <%= image_tag  'flower_picture/DSC_0011.JPG',class:" img-responsive  front_index"%>
+               <!--    <div class="carousel-caption">
+                    
+                  </div> -->
+                </div>
+                <div class="item">
+                  <%= image_tag  'flower_picture/DSC_0011.JPG',class:" img-responsive  front_index"%>
+           
+                </div>
+                  <div class="item">
+                  <%= image_tag  'flower_picture/DSC_0083.JPG',class:" img-responsive  front_index"%>
+                  </div>
+              </div>
 
-  <!-- Controls -->
-  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
-
-    </div>
-<!-- </div>
- </div>
- -->      
-<div class="container-fluid">
-      <div class="row">
-            <div class="col-xs-12  col-sm-12 ">
-                      <div class="row">
-                                <div class="col-xs-12 col-sm-1"></div>
-                                <div class="col-xs-12 col-sm-5 index_context  index_picture ">  <%= image_tag  'flower_picture/middle.jpg',class:" img-thumbnail img-responsive" %></div>
-                                <div class="col-xs-12 col-sm-3
-                                index_context text-muted "><p>鮮花是戀愛的組成的元素之一</p><hr /><p>乾燥賦予了日久月深</p></div>
-                    </div>
-
+              <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+                </div>
             </div>
 
-    </div>
-
-</div>
-  <%= render partial:'flower/footbar'%>
-
-
-
-
+ 
+   <div class="jumbotron" style="background-color: #EADAC8;">
+    <div class="container-fluid" >
+         <div class="col-xs-12 col-sm-5  ">  <%= image_tag  'flower_picture/middle.jpg',class:" img-thumbnail img-responsive" %></div>
+                                <div class="col-xs-12 col-sm-3
+                                index_context text-muted "><p>鮮花是戀愛的組成的元素之一</p><hr /><p>乾燥賦予了日久月深</p></div>
+    </div>        
+  </div>
+ <%= render partial:'flower/footbar'%>
