--- a/beginner/app/views/flower_products/edit.html.erb
+++ b/beginner/app/views/flower_products/edit.html.erb
@@ -1,17 +1,43 @@
 
 <h3>編輯產品</h3>
 <%= form_for @product ,method: :put,class:"form-inline"  do|f|%>
-<%=	f.label :產品名稱%>:
+<%=	f.label :name,"產品名稱"%>:
 <%= f.text_field :name%><br/>
-<%=	f.label :產品名稱%>:<br/>
+<%=	f.label :description,"產品敘述"%>:<br/>
 <%= f.text_area :description%><br/>
-<%=	f.label :圖片%>:<br/>
-<%= f.file_field :image_url  %><br/>
+
+
+<%=	f.label :image,'圖片'%>:<br/>
+<%=image_tag @product.image_url,size:'200x100',id:"currentpicture"%><br/>
+<%= f.file_field :image, accept: "image/git,image/jpeg,image/png" %><br/>
+
+<%=f.label :flower_sub_category_id ,'類別' %>:
+<%=f.select("flower_sub_category_id",FlowerSubCategory.all.collect{|s| [s.name_with_category,s.id]},{include_blank:'請選擇'})%>  <br/>
 <%= f.submit :更新 ,class:"btn btn-default"%>
 <%=link_to '返回',flower_products_path,class:"btn btn-default"%>
 
 <%end%>
 
+<script type="text/javascript">
+	
+	$(function(){
+		$("#flower_product_image").change(function(){
+			readURL(this,"currentpicture");
+		});
+		function readURL(input,image_tag_id){
+		if(input.files && input.files[0]){
+			var reader = new FileReader();
+			reader.onload=function(e){
+				$('#'+image_tag_id).attr('src',e.target.result);
+			}
+			reader.readAsDataURL(input.files[0]);
+		}
+	}
+
+	});
+
+
+</script>
 
 
 
