--- a/beginner/app/views/layouts/application.html.erb
+++ b/beginner/app/views/layouts/application.html.erb
@@ -4,6 +4,9 @@
        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta name="viewport" content="width=device-width, initial-scale=1">
  
+
+
+    
     <title>Beginner</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -13,10 +16,16 @@
   </head>
 
   <body>
-    <%if flash[:notice]%>
-  <div class="alert alert-success" role="alert"><%= flash[:notice]%> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
-
-<%end%>
+ <%if flash[:notice]%>
+  <div  class="jumbotron" style="background-color: #EADAC8; margin:0;padding: 50px 0 0 0 ;">
+    <div class="container-fluid" style=" margin:0;padding:0">
+    <div class="row style=" margin:0;padding:0"">
+  <div class="alert alert-success" role="alert" "><%= flash[:notice]%> <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+  </div>
+  </div>
+  </div>
+  <%end%>
     <%= yield %>
+  
   </body>
 </html>
