--- a/beginner/app/views/flower_products/card/_card.html.erb
+++ b/beginner/app/views/flower_products/card/_card.html.erb
@@ -1,4 +1,4 @@
-		 <%= image_tag product[:image_url],class:" img-responsive  front_index"%>
+		 <%= image_tag (product[:image_url] || "flower_picture/flower_pot.png"),class:" img-responsive  front_index"%>
 	      <div class="caption">
 			
 				 <h3><%=  product[:name]%></h3>
