--- a/beginner/app/views/categories/flower_products.html.erb
+++ b/beginner/app/views/categories/flower_products.html.erb
@@ -44,32 +44,11 @@
 								</div>
 						 <%end%>
 					</div>
-						<div class="row">
-							<div class="col-xs-12">
-									<nav aria-label="Page navigation">
-									  <ul class="pagination">
-									  	<%if @page > 1%>
-									    <li>
-									      <%=link_to flower_products_path(page:(@page-1)) do%>
-									        <span aria-hidden="true">&laquo;</span>
-									      <%end%>
-									    </li>
-									    <%end%>
-									    <% (@first_page..@last_page).each do |page_number|%>
-									    <li><%=link_to page_number,flower_products_path(page: page_number)%></a></li>
-									    <%end%>
-									    <%if @page < @last_page%>
-									    <li>
-									    	  <%=link_to flower_products_path(page:(@page+1)) do%>
-									       			<span aria-hidden="true">&raquo;</span>
-									      	<%end%>
-									    </li>
-									    <%end%>
-
-									  </ul>
-								</nav>	
-							</div>
-						</div>	
+							<%= render "flower_products/componer/pagination",
+							 page: @page,
+							 first_page: @first_page,
+							 last_page: @last_page,
+							 url_coustom_helor_name: :flower_products_category_path %>
 
 			    </div>
 			</div>
