--- a/beginner/app/views/flower_products/card/_card.html.erb
+++ b/beginner/app/views/flower_products/card/_card.html.erb
@@ -1,7 +1,12 @@
+		
+		<%= link_to flower_product_path(product) do%>
 		 <%= image_tag (product[:image_url] || "flower_picture/flower_pot.png"),class:" img-responsive  front_index"%>
+		 <%end%>
+
 	      <div class="caption">
-			
+	      	<%= link_to flower_product_path(product) do%>
 				 <h3><%=  product[:name]%></h3>
+				  <%end%>
 					 <p><%= product[:description] %></p>
 					 <%if current_user %>
 					<div> 
