--- a/beginner/app/views/flower/_nav.html.erb
+++ b/beginner/app/views/flower/_nav.html.erb
@@ -31,15 +31,16 @@
 
                 <li><%= link_to '關於初心',flower_path%></li>
                 <li><%= link_to '作品',flower_products_path%></li>
+                <li><%= link_to '',cart_items_path,class:"glyphicon glyphicon-shopping-cart"%></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle glyphicon glyphicon glyphicon-user" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= current_user.try(:name) %><span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <%if ! current_user%>
 
-                        <li><%= link_to ' 登入',flower_user_log_in_path ,class:"glyphicon glyphicon-log-in"%></li>
+                        <li><%= link_to ' 登入',new_user_session_path ,class:"glyphicon glyphicon-log-in"%></li>
                         <%else%>
                         <li><%= link_to ' 新增產品',new_flower_product_path ,class:"glyphicon glyphicon-log-in"%></li>
-                        <li><%= link_to ' 登出',flower_user_log_out_path ,class:"glyphicon glyphicon-log-in"%></li>
+                        <li><%= link_to ' 登出',destroy_user_session_path ,class:"glyphicon glyphicon-log-in"%></li>
                         <%end%>
                     </ul>
                 </li>
