--- a/beginner/app/views/flower/_nav.html.erb
+++ b/beginner/app/views/flower/_nav.html.erb
@@ -33,11 +33,11 @@
                 <li><%= link_to '作品',flower_products_path%></li>
                 <li><%= link_to '',cart_items_path,class:"glyphicon glyphicon-shopping-cart"%></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle glyphicon glyphicon glyphicon-user" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= current_user.try(:name) %><span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle glyphicon glyphicon glyphicon-user" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <%= current_user.try(:email) %><span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <%if ! current_user%>
 
-                        <li><%= link_to ' 登入',new_user_session_path ,class:"glyphicon glyphicon-log-in"%></li>
+                        <li><%= link_to '登入',new_user_session_path ,class:"glyphicon glyphicon-log-in"%></li>
                         <%else%>
                         <li><%= link_to ' 新增產品',new_flower_product_path ,class:"glyphicon glyphicon-log-in"%></li>
                         <li><%= link_to ' 登出',destroy_user_session_path ,class:"glyphicon glyphicon-log-in"%></li>
