--- a/beginner/app/views/subcategories/flower_products.html.erb
+++ b/beginner/app/views/subcategories/flower_products.html.erb
@@ -7,11 +7,12 @@
 		</div>
 		<div class="jumbotron" style="background-color: #EADAC8;">
 			<div class="row">
-				<div class="col-xs-12 col-md-3">
+				<div class="col-xs-12 col-md-2">
 
 					<% @flower_category.each do |category| %>
 					<ul class="list-group ">
-						<li class="list-group-item col-xs-12" style="background-color:#fffaf0;font-size: 18px;">
+						<li class="list-group-item col-xs-12"
+							style="background-color:#fffaf0;font-size: 18px;">
 							<%= link_to  flower_products_category_path(category),style:"color:#000000;" do%>
 							<%= category.try(:name)%>
 							<%end%>
@@ -33,10 +34,10 @@
 					<%end%>
 
 				</div>
-				<div class="col-xs-12 col-md-12">
+				<div class="col-xs-12 col-md-9">
 					<div class="row">
 						<% @bundle_flower.each do |product|%>
-						<div class="col-xs-12 col-md-3">
+						<div class="col-xs-12 col-md-6">
 							<div class="thumbnail" style="background-color: #EADAC8;">
 								<%= render 'flower_products/card/card.html.erb',product: product%>
 							</div>
