--- a/beginner/app/views/flower_products/show.html.erb
+++ b/beginner/app/views/flower_products/show.html.erb
@@ -1,50 +1,57 @@
 <%= render partial:'flower/nav'%>
-<br />
-<div class="container-fluid">
-    <div class="row">
-        <%= render "flower_products/componer/side_bar", flower_category: @flower_category %>
-        <div class="col-xs-10 col-md-8">
-            <div class="col-xs-12 col-md-12">
-                <p><%="類別:#{@product.flower_sub_category.try(:name)}"%></p>
-            </div>
-            <div class="jumbotron" style="background-color: #EADAC8;">
-                <div class="thumbnail" style="background-color: #EADAC8;">
-                    <div class="row">
-                        <div class="col-xs-3 col-md-3">
-                            <%= image_tag (@product.image_url.url || "flower_picture/flower_pot.png"),class:" img-responsive"%>
-                        </div>
-                        <div class="col-xs-9 col-md-9">
-                            <h3><%="#{@product[:name]}"%></h3>
-                            <br />
-                            <p><%="#{@product[:description] }"%></p>
-                        </div>
+    <br />
+    <div class="container-fluid">
+        <div class="row">
+            <%= render "flower_products/componer/side_bar" , flower_category: @flower_category %>
+                <div class="col-xs-10 col-md-8">
+                    <div class="col-xs-12 col-md-12">
+                        <p>
+                            <%="類別:#{@product.flower_sub_category.try(:name)}"%>
+                        </p>
                     </div>
-                    <br />
-                    <div class="row">
-                        <div class="col-xs-12 col-md-12">
-                            <%=form_tag cart_items_path ,method: :post do%>
-                            <%= hidden_field_tag(:flower_product_id, @product.id) %>
-                            <%= hidden_field_tag(:cart_type, Cart.cart_types[:buy_now]) %>
-                            <button class="btn btn-primary btn-block">加入購物車</button>
-                            <%end%>
+                    <div class="jumbotron" style="background-color: #EADAC8;">
+                        <div class="thumbnail" style="background-color: #EADAC8;">
+                            <div class="row">
+                                <div class="col-xs-3 col-md-3">
+                                    <%= image_tag (@product.image_url.url || "flower_picture/flower_pot.png"
+                                        ),class:"img-responsive"%>
+                                </div>
+                                <div class="col-xs-9 col-md-9">
+                                    <h3>
+                                        <%="#{@product[:name]}"%>
+                                    </h3>
+                                    <br />
+                                    <p>
+                                        <%="#{@product[:description] }"%>
+                                    </p>
+                                </div>
+                            </div>
+                            <br />
+                            <div class="row">
+                                <div class="col-xs-12 col-md-12">
+                                    <%=form_tag cart_items_path ,method: :post do%>
+                                        <%= hidden_field_tag(:flower_product_id, @product.id) %>
+                                            <%= hidden_field_tag(:cart_type, Cart.cart_types[:buy_now]) %>
+                                                <button class="btn btn-primary btn-block">加入購物車</button>
+                                                <%end%>
+                                </div>
+
+                            </div>
+                            <br />
+                            <div class="row">
+                                <div class="col-xs-12 col-md-12">
+                                    <%=form_tag cart_items_path ,method: :post do%>
+                                        <%= hidden_field_tag(:flower_product_id, @product.id) %>
+                                            <%= hidden_field_tag(:cart_type, Cart.cart_types[:buy_next_time]) %>
+                                                <button class="btn btn-warning btn-block">下次購買</button>
+                                                <%end%>
+                                </div>
+                            </div>
                         </div>
 
-                    </div>
-                    <br />
-                    <div class="row">
-                        <div class="col-xs-12 col-md-12">
-                            <%=form_tag cart_items_path ,method: :post do%>
-                            <%= hidden_field_tag(:flower_product_id, @product.id) %>
-                            <%= hidden_field_tag(:cart_type, Cart.cart_types[:buy_next_time]) %>
-                            <button class="btn btn-warning btn-block">下次購買</button>
-                            <%end%>
-                        </div>
+                        <%= render partial:'flower/footbar'%>
                     </div>
                 </div>
 
-                <%= render partial:'flower/footbar'%>
-            </div>
         </div>
-
     </div>
-</div>
