--- a/beginner/app/views/flower_products/componer/_side_bar.html.erb
+++ b/beginner/app/views/flower_products/componer/_side_bar.html.erb
@@ -1,15 +1,15 @@
 <div class="jumbotron" style="background-color: #EADAC8;">
     <div class="row">
-        <div class="col-xs-12 col-md-3">
+        <div class="col-xs-12 col-md-4">
             <% flower_category.each do |category| %>
             <ul class="list-group ">
-                <li class="list-group-item col-xs-12" style="background-color:#fffaf0;font-size: 18px;">
+                <li class="list-group-item col-xs-12 col-md-9"  style="background-color:#fffaf0;font-size: 18px;">
                     <%= link_to  flower_products_category_path(category),style:"color:#000000;" do%>
                     <%= category.try(:name)%>
                     <%end%>
-                    <ul class="list-group col-xs-12">
+                    <ul class="list-group col-xs-12 col-md-12">
                         <% category.flower_sub_category.each do |sub_category| %>
-                        <li class="list-group-item col-xs-12 glyphicon glyphicon-gift"
+                        <li class="list-group-item col-xs-12 col-md-12 glyphicon glyphicon-gift"
                             style="background-color: #fffaf0; text-align:center; font-size: 18px; ">
                             <%= link_to flower_products_subcategory_path(category_id: category.id,subcategories_id: sub_category.id),style:"color:#000000;" do%>
                             <%= sub_category.try(:name)%>
