--- a/beginner/app/views/flower_products/show.html.erb
+++ b/beginner/app/views/flower_products/show.html.erb
@@ -3,7 +3,7 @@
     <div class="container-fluid">
         <div class="row">
             <%= render "flower_products/componer/side_bar" , flower_category: @flower_category %>
-                <div class="col-xs-10 col-md-8">
+                <div class="col-xs-12 col-md-8">
                     <div class="col-xs-12 col-md-12">
                         <p>
                             <%="類別:#{@product.flower_sub_category.try(:name)}"%>
@@ -12,17 +12,20 @@
                     <div class="jumbotron" style="background-color: #EADAC8;">
                         <div class="thumbnail" style="background-color: #EADAC8;">
                             <div class="row">
-                                <div class="col-xs-3 col-md-3">
+                                <div class="col-xs-４ col-md-５">
                                     <%= image_tag (@product.image_url.url || "flower_picture/flower_pot.png"
                                         ),class:"img-responsive"%>
                                 </div>
-                                <div class="col-xs-9 col-md-9">
+                                <div class="col-xs-８ col-md-７">
                                     <h3>
                                         <%="#{@product[:name]}"%>
                                     </h3>
                                     <br />
                                     <p>
-                                        <%="#{@product[:description] }"%>
+                                        <%="商品資訊#{@product[:description] }"%>
+                                    </p>
+                                    <p>
+                                        <%="價格：#{@product[:price] }"%>
                                     </p>
                                 </div>
                             </div>
@@ -35,7 +38,6 @@
                                                 <button class="btn btn-primary btn-block">加入購物車</button>
                                                 <%end%>
                                 </div>
-
                             </div>
                             <br />
                             <div class="row">
