--- a/beginner/app/views/payments/index.html.erb
+++ b/beginner/app/views/payments/index.html.erb
@@ -1,3 +1,4 @@
+
 <table class="table table-condensed">
   <tr>
     <p>訂單號碼：<%=@order.id%></p>
@@ -6,13 +7,13 @@
     <p>訂單金額：<%=@order.amount%></p>
   </tr>
   <tr>
-    <p>收件人：<%#=@order.user.name%></p>
+    <p>收件人：<%=@order.user.name%></p>
   </tr>
   <tr>
-    <p>收件人地址：<%#=@order.user.address%></p>
+    <p>收件人地址：<%=@order.user.address%></p>
   </tr>
   <tr>
-    <p>收件人電話：<%#=@order.user.phone%></p>
+    <p>收件人電話：<%=@order.user.phone%></p>
   </tr>
 
 </table>
